--- a/MP-TVSeries/Resources/Languages/es.xml
+++ b/MP-TVSeries/Resources/Languages/es.xml
@@ -105,8 +105,10 @@
   <string Field="TVDB_INFO_TITLE" Original="theTVDB">theTVDB</string>
   <string Field="TVDB_INFO_ACCOUNTID_1" Original="Account Identifier is not set">Datos de cuenta no establecidos</string>
   <string Field="TVDB_INFO_ACCOUNTID_2" Original="Enter your online account ID in Configuration">Introduzca sus datos de cuenta en Configuración</string>
-  <string Field="TVDB_ERROR_UNAVAILABLE" Original="TheTVDB.com is currently unavailable, try again later">TheTVDB.com no está actualmente disponible, inténtelo más tarde</string>
-  <string Field="NETWORK_ERROR_UNAVAILABLE" Original="Network connection is unavailable, check connection and try again">Conexión de red no disponible, compruebe la conexión e inténtelo de nuevo</string>
+  <string Field="TVDB_ERROR_UNAVAILABLE_1" Original="TheTVDB.com is currently unavailable">TheTVDB.com no está actualmente disponible</string>
+  <string Field="TVDB_ERROR_UNAVAILABLE_2" Original="Please try again later">Inténtelo más tarde</string>
+  <string Field="NETWORK_ERROR_UNAVAILABLE_1" Original="Network connection is unavailable">Conexión de red no disponible</string>
+  <string Field="NETWORK_ERROR_UNAVAILABLE_2" Original="Check your connection and try again">Compruebe la conexión e inténtelo de nuevo</string>
   <string Field="ShowSeriesFanart" Original="Show Fanart in Series View">Mostrar Fanart en la Vista de Series</string>
   <string Field="ChangeLayout" Original="Change Layout">Cambiar diseño</string>
   <string Field="UseOnlineFavourites" Original="Use Online Favourites">Usar Favoritos Online</string>
