--- a/trunk/MP-TVSeries/Resources/Languages/en(us).xml
+++ b/trunk/MP-TVSeries/Resources/Languages/en(us).xml
@@ -107,8 +107,10 @@
 	<string Field="TVDB_INFO_TITLE" Original="theTVDB">theTVDB</string>
 	<string Field="TVDB_INFO_ACCOUNTID_1" Original="Account Identifier is not set">Account Identifier is not set</string>
 	<string Field="TVDB_INFO_ACCOUNTID_2" Original="Enter your online account ID in Configuration">Enter your online account ID in Configuration</string>
-	<string Field="TVDB_ERROR_UNAVAILABLE" Original="TheTVDB.com is currently unavailable, try again later">TheTVDB.com is currently unavailable, try again later</string>
-	<string Field="NETWORK_ERROR_UNAVAILABLE" Original="Network connection is unavailable, check connection and try again">Network connection is unavailable, check connection and try again</string>
+	<string Field="TVDB_ERROR_UNAVAILABLE_1" Original="TheTVDB.com is currently unavailable">TheTVDB.com is currently unavailable</string>
+	<string Field="TVDB_ERROR_UNAVAILABLE_2" Original="Please try again later">Please try again later</string>
+	<string Field="NETWORK_ERROR_UNAVAILABLE_1" Original="Network connection is unavailable">Network connection is unavailable</string>
+	<string Field="NETWORK_ERROR_UNAVAILABLE_2" Original="Check your connection and try again">Check your connection and try again</string>
 	<string Field="ShowSeriesFanart" Original="Show Fanart in Series View">Show Fanart in Series View</string>
 	<string Field="ChangeLayout" Original="Change Layout">Change Layout</string>
 	<string Field="UseOnlineFavourites" Original="Use Online Favourites">Use Online Favourites</string>
