--- a/MP-TVSeries/Resources/Languages/da.xml
+++ b/MP-TVSeries/Resources/Languages/da.xml
@@ -144,10 +144,10 @@
 	<string Field="Hide_thumbnail_on_unwatched" Original="Hide Spoiler Thumbnails">Gem spoiler miniatureportræter</string>	
 	<!-- Rate Descriptions - 5 Stars-->
 	<string Field="RateFiveStarOne" Original="Terrible">Forfærdelig</string>
-	<string Field="RateFiveStarTwo" Original="">Middelmådig</string>
-	<string Field="RateFiveStarThree" Original="">God</string>
-	<string Field="RateFiveStarFour" Original="">Fortrinlig</string>
-	<string Field="RateFiveStarFive" Original="">Perfekt</string>
+	<string Field="RateFiveStarTwo" Original="Mediocre">Middelmådig</string>
+	<string Field="RateFiveStarThree" Original="Good">God</string>
+	<string Field="RateFiveStarFour" Original="Superb">Fortrinlig</string>
+	<string Field="RateFiveStarFive" Original="Perfect">Perfekt</string>
 	<!-- Rate Descriptions - 10 Stars-->
 	<string Field="RateTenStarOne" Original="Abysmal">Rædselsfuld</string>
 	<string Field="RateTenStarTwo" Original="Terrible">Forfærdelig</string>
