--- a/MP-TVSeries/Resources/Languages/sv.xml
+++ b/MP-TVSeries/Resources/Languages/sv.xml
@@ -107,8 +107,10 @@
         <string Field="TVDB_INFO_TITLE" Original="theTVDB">theTVDB</string>
         <string Field="TVDB_INFO_ACCOUNTID_1" Original="Account Identifier is not set">Konto-id är inte korrekt inmatat</string>
         <string Field="TVDB_INFO_ACCOUNTID_2" Original="Enter your online account ID in Configuration">Mata in ditt theTVDB-konto i inställningarna för denna plugin</string>
-        <string Field="TVDB_ERROR_UNAVAILABLE" Original="TheTVDB.com is currently unavailable, try again later">TheTVDB.com är nere för tillfället, försök igen senare</string>
-        <string Field="NETWORK_ERROR_UNAVAILABLE" Original="Network connection is unavailable, check connection and try again">Nät-anslutning är ej möjlig, kontrollera uppkoppling och försök igen</string>
+        <string Field="TVDB_ERROR_UNAVAILABLE_1" Original="TheTVDB.com is currently unavailable">TheTVDB.com är nere för tillfället</string>
+		<string Field="TVDB_ERROR_UNAVAILABLE_2" Original="Please try again later">Försök igen senare</string>
+        <string Field="NETWORK_ERROR_UNAVAILABLE_1" Original="Network connection is unavailable">Nät-anslutning är ej möjlig</string>
+		<string Field="NETWORK_ERROR_UNAVAILABLE_2" Original="Check you connection and try again">Kontrollera uppkoppling och försök igen</string>
         <string Field="ShowSeriesFanart" Original="Show Fanart in Series View">Visa Fanart i Serier-vyn</string>
         <string Field="ChangeLayout" Original="Change Layout">byt layout</string>
         <string Field="UseOnlineFavourites" Original="Use Online Favourites">Använd online-favoriter</string>
