--- a/trunk/MP-TVSeries/Resources/Languages/pl.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/pl.xml
@@ -106,8 +106,10 @@
 	<string Field="TVDB_INFO_TITLE" Original="theTVDB">theTVDB</string>
 	<string Field="TVDB_INFO_ACCOUNTID_1" Original="Account Identifier is not set">Identyfikator Konta nie ustawiony</string>
 	<string Field="TVDB_INFO_ACCOUNTID_2" Original="Enter your online account ID in Configuration">Wpisz ID konta w Konfiguracji</string>
-	<string Field="TVDB_ERROR_UNAVAILABLE" Original="TheTVDB.com is currently unavailable, try again later">TheTVDB.com jest obecnie niedostępne, spróbuj ponownie później</string>
-	<string Field="NETWORK_ERROR_UNAVAILABLE" Original="Network connection is unavailable, check connection and try again">Połączenie sieciowe jest niedostępne, sprawdź połączenie i spróbuj ponownie</string>
+	<string Field="TVDB_ERROR_UNAVAILABLE_1" Original="TheTVDB.com is currently unavailable">TheTVDB.com jest obecnie niedostępne</string>
+	<string Field="TVDB_ERROR_UNAVAILABLE_2" Original="Please try again later">Spróbuj ponownie później</string>
+	<string Field="NETWORK_ERROR_UNAVAILABLE_1" Original="Network connection is unavailable">Połączenie sieciowe jest niedostępne</string>
+	<string Field="NETWORK_ERROR_UNAVAILABLE_2" Original="Check your connection and try again">Sprawdź połączenie i spróbuj ponownie</string>
 	<string Field="ShowSeriesFanart" Original="Show Fanart in Series View">Pokaż Fanart(y) w Widoku Odcinków</string>
 	<string Field="ChangeLayout" Original="Change Layout">Zmień Wygląd</string>
 	<string Field="UseOnlineFavourites" Original="Use Online Favourites">Użyj Ulubionych Online</string>
